--- a/BC_client/index.html
+++ b/BC_client/index.html
@@ -16,22 +16,31 @@
 		<div class="loader" style="display: none;"></div>
 	</div>
     <header class="header-section">
-        <div class="container" style="size:100px;">
+        <div class="container">
             <div class="row">
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">딸근</a>
+                <ul class="nav col-lg-8" style= "font-size: 50px; width: 100%; height: 40px;">
+                    <li class="nav-item ">
+                        <a class="nav-link active" href="#", style="color:black">딸근</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#", style="color:black">Link</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#", style="color:black">Link</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link" href="#", style="color:black">Link</a>
                     </li>
                 </ul>
+                <ul class="nav col-lg-4" style= "font-size: 40px; padding: 10px; width: 100%; height: 40px;">
+                    <li class="nav-item ">
+                        <a class="nav-link active" href="#", style="color:black">회원가입</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#", style="color:black">로그인</a>
+                    </li>
+                </ul>
+
             </div>
         </div>
     </header>
