--- a/BC_client/login.html
+++ b/BC_client/login.html
@@ -31,6 +31,38 @@
 </head>
 <body>
     <header class="header-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2 col-md-2">
+                    <div class="logo">
+                        <a href="#">
+                            <img src="images/logo.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-10 col-md-10">
+                    <div class="main-menu mobile-menu">
+                        <ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./about-us.html">About Us</a></li>
+                            <li><a href="./items.html">Items</a>
+                                <ul class="dropdown">
+                                    <li><a href="#">Naoh</a></li>
+                                    <li><a href="#">Padis</a></li>
+                                    <li><a href="#">Jacob</a></li>
+                                    <li><a href="#">Gomez</a></li>
+                                </ul>
+                            </li>
+                            <li class="active"><a href="./login.html">Login/SignUp</a></li>
+                            <li><a href="./blog.html">Login/SignUp</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div id="mobile-menu-wrap"></div>
+        </div>
+    <!-- Header End -->
 		<div class="limiter">
 			<div class="container-login100">
 				<div class="wrap-login100">
